--- a/newadd.ui
+++ b/newadd.ui
@@ -40,7 +40,7 @@
    <string>Jauna sēne</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(47, 56, 47);</string>
+   <string notr="true">background-color: rgb(9, 46, 33);</string>
   </property>
   <widget class="QLabel" name="questionlabel">
    <property name="geometry">
@@ -78,9 +78,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -96,18 +96,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -125,9 +125,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -143,18 +143,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -172,9 +172,9 @@
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -190,18 +190,18 @@
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -236,7 +236,7 @@ text-align: center;</string>
     <number>0</number>
    </property>
   </widget>
-  <widget class="QPushButton" name="backbutton">
+  <widget class="QPushButton" name="homebutton">
    <property name="geometry">
     <rect>
      <x>20</x>
@@ -287,8 +287,8 @@ text-align: center;</string>
     <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
 &lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
 p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Comic Sans MS'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-size:14pt; font-weight:600; color:#c7daba;&quot;&gt;Attēls here&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Shell Dlg 2'; font-size:7.8pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-size:14pt; font-weight:600; color:#c7daba;&quot;&gt;Attēls here&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
   <widget class="QLabel" name="newtitle">
@@ -327,9 +327,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -345,18 +345,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -374,9 +374,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -392,18 +392,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -421,9 +421,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -439,18 +439,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -481,7 +481,7 @@ p, li { white-space: pre-wrap; }
     <number>0</number>
    </property>
   </widget>
-  <widget class="QLabel" name="questionlabel_2">
+  <widget class="QLabel" name="outputlabel">
    <property name="geometry">
     <rect>
      <x>200</x>
@@ -517,9 +517,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -535,18 +535,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -564,9 +564,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -582,18 +582,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -611,9 +611,9 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Button">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -629,18 +629,18 @@ p, li { white-space: pre-wrap; }
       <colorrole role="Base">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
       <colorrole role="Window">
        <brush brushstyle="SolidPattern">
         <color alpha="255">
-         <red>47</red>
-         <green>56</green>
-         <blue>47</blue>
+         <red>9</red>
+         <green>46</green>
+         <blue>33</blue>
         </color>
        </brush>
       </colorrole>
@@ -675,7 +675,7 @@ text-align: center;</string>
     <number>0</number>
    </property>
   </widget>
-  <widget class="QTextBrowser" name="imageselected_2">
+  <widget class="QTextBrowser" name="textoutput">
    <property name="geometry">
     <rect>
      <x>40</x>
@@ -722,7 +722,7 @@ p, li { white-space: pre-wrap; }
 &lt;p align=&quot;center&quot; style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-family:'MS Shell Dlg 2'; font-weight:600; color:#c7daba;&quot;&gt;sēneee&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="backbutton_2">
+  <widget class="QPushButton" name="addbutton">
    <property name="geometry">
     <rect>
      <x>70</x>
@@ -761,7 +761,7 @@ color: rgb(199, 218, 186);</string>
     <string>Pievienot</string>
    </property>
   </widget>
-  <widget class="QPushButton" name="backbutton_3">
+  <widget class="QPushButton" name="deletebutton">
    <property name="geometry">
     <rect>
      <x>280</x>
@@ -800,14 +800,14 @@ color: rgb(199, 218, 186);</string>
     <string>Atmest</string>
    </property>
   </widget>
-  <zorder>questionlabel_2</zorder>
+  <zorder>outputlabel</zorder>
   <zorder>questionlabel</zorder>
-  <zorder>backbutton</zorder>
+  <zorder>homebutton</zorder>
   <zorder>imageselected</zorder>
   <zorder>newtitle</zorder>
-  <zorder>imageselected_2</zorder>
-  <zorder>backbutton_2</zorder>
-  <zorder>backbutton_3</zorder>
+  <zorder>textoutput</zorder>
+  <zorder>addbutton</zorder>
+  <zorder>deletebutton</zorder>
  </widget>
  <resources/>
  <connections/>
