--- a/ui/register.ui
+++ b/ui/register.ui
@@ -2187,9 +2187,9 @@ color: rgb(199, 218, 186);</string>
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>62</green>
-          <blue>3</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2202,12 +2202,21 @@ color: rgb(199, 218, 186);</string>
          </color>
         </brush>
        </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
+         </color>
+        </brush>
+       </colorrole>
        <colorrole role="ButtonText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>62</green>
-          <blue>3</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2234,9 +2243,9 @@ color: rgb(199, 218, 186);</string>
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>62</green>
-          <blue>3</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2249,12 +2258,21 @@ color: rgb(199, 218, 186);</string>
          </color>
         </brush>
        </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
+         </color>
+        </brush>
+       </colorrole>
        <colorrole role="ButtonText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>255</red>
-          <green>62</green>
-          <blue>3</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2281,9 +2299,9 @@ color: rgb(199, 218, 186);</string>
        <colorrole role="WindowText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>120</red>
-          <green>120</green>
-          <blue>120</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2296,12 +2314,21 @@ color: rgb(199, 218, 186);</string>
          </color>
         </brush>
        </colorrole>
+       <colorrole role="Text">
+        <brush brushstyle="SolidPattern">
+         <color alpha="255">
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
+         </color>
+        </brush>
+       </colorrole>
        <colorrole role="ButtonText">
         <brush brushstyle="SolidPattern">
          <color alpha="255">
-          <red>120</red>
-          <green>120</green>
-          <blue>120</blue>
+          <red>181</red>
+          <green>229</green>
+          <blue>4</blue>
          </color>
         </brush>
        </colorrole>
@@ -2341,7 +2368,7 @@ color: rgb(199, 218, 186);</string>
     <property name="styleSheet">
      <string notr="true">qproperty-alignment: AlignCenter;
 font: 75 10pt &quot;Comic Sans MS&quot;;
-color: rgb(255, 96, 23);</string>
+color: rgb(181, 229, 4);</string>
     </property>
     <property name="locale">
      <locale language="Latvian" country="Latvia"/>
