paroles tiek aizstātas ar zvaigznītēm

--- a/ui/account.ui
+++ b/ui/account.ui
@@ -38,13 +38,19 @@
       <height>71</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
     <property name="styleSheet">
      <string notr="true">border-radius: 30px;
 background-color: rgb(66, 88, 56);
 color: rgb(199, 218, 186);</string>
     </property>
     <property name="text">
-     <string>home</string>
+     <string>mājas</string>
     </property>
    </widget>
    <widget class="QLabel" name="newtitle">
